fix: fix btn whitespace wrap, home page buttons in mobile

--- a/simple-design-system/css/components/btn/index.css
+++ b/simple-design-system/css/components/btn/index.css
@@ -59,7 +59,7 @@
 }
 
 .btn {
-  @apply border inline-block py-2 px-4 rounded select-none shadow;
+  @apply border inline-block py-2 px-4 rounded select-none whitespace-no-wrap shadow;
   border-color: var(--btn-variant);
   background-color: var(--btn-variant);
   color: var(--btn-variant-on);
